uneven image fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -146,6 +146,8 @@ body {
     header nav{
         text-align: center;
         width: 100%;
+        width: 1100px;
+        margin:auto;
     }
 
     /*get rid of the default list shape, auto margin and padding right ensure it at center*/
@@ -153,7 +155,6 @@ body {
         list-style-type: none;
         padding-right: 50px;
         margin: auto;
-        max-width:1100px;
     }
 
     /*give the navbar a padding space top and bottom, bold its font weight*/
@@ -250,6 +251,7 @@ body {
         font-weight: 800;
         clear: both
     }
+
     main {
         margin: 30px;
     }
@@ -502,14 +504,15 @@ body {
 
     .contact-title, .skill-title {
         margin: auto;
-        width:1100px;
         padding: 10em 0 2em 0;
         font-weight: 800;
         clear: both
     }
 
     main {
-        margin: 40px;
+        margin: auto;
+        width: 1100px;
+        
     }
 
     h2, h3 {
